--- a/readme
+++ b/readme
@@ -1,14 +1,35 @@
-Compilare server:
+# TCP Concurrent Server
+
+## Description:
+Consider a concurrent TCP server capable of connecting a maximum of N clients.
+Every T seconds (where T < 120), the server will receive a message from some of the clients, identifying a type of food (from 1 to 5) chosen randomly by the respective client.
+The server will count the requests, and for the most preferred food type (having the highest number of requests), it will respond to the requesting clients with "Meal is served".
+For the other clients (who have chosen a different type of food), it will respond with "Unavailable". A client that has been served lunch will display a message "Satisfied!" and terminate its execution.
+A refused client will retry with another randomly chosen request after an also randomly chosen interval (up to 60 seconds).
+After three refused requests, a client will display "Changing cafeteria! Starving here!" and terminate its execution.
+
+
+## Compilation:
+
+### Server:
+```bash
 g++ server.cpp -o server
+```
 
-Compilare client
+### Client:
+```bash
 g++ client.cpp -o client
+```
 
-Rulare server:
+## Running the Server:
+```bash
 ./server
+```
 
-Rulare client
+## Running the Client:
+```bash
 ./client 127.0.0.1 2908
+```
 
-
-Fie un server TCP concurent la care se pot conecta maxim N clienti. Din T in T secunde (T < 120) serverul va primi un mesaj de la o parte din clienti ce va identifica printr-un numar un fel de mancare (de la 1 la 5) ales random de respectivul client. Serverul va contoriza cererile iar pentru felul cel mai preferat (avand cele mai multe cereri) va trimite la clientii solicitanti ca raspuns: "Masa e servita". Celorlalti clienti (care au ales alt fel), le va raspunde cu "Indisponibil". Un client ce a fost servit cu pranzul va afisa un mesaj "Satul!" si isi va incheia executia. Un client refuzat va mai incerca o cerere aleasa tot random dupa un interval ales de asemeni aleator (pana in 60 de secunde). La trei cereri refuzate, un client va afisa "Schimb cantina! Aici mor de foame!" si isi va incheia executia.
+## Collaborator
+- Macsim Oana
